--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "React accordion component",
   "main": "index.js",
   "scripts": {
+    "demo": "webpack-dev-server --config webpack.config.demo.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +26,9 @@
   },
   "devDependencies": {
     "babel": "5.4.7",
-    "webpack": "1.9.10"
+    "babel-core": "5.4.7",
+    "babel-loader": "5.1.3",
+    "webpack": "1.9.10",
+    "webpack-dev-server": "1.9.0"
   }
 }
