--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/daviferreira/react-sanfona",
   "dependencies": {
+    "classnames": "2.1.2",
     "react": "0.13.x",
     "uuid": "2.0.1"
   },
