--- a/package.json
+++ b/package.json
@@ -22,14 +22,20 @@
   },
   "homepage": "https://github.com/daviferreira/react-sanfona",
   "dependencies": {
+    "autoprefixer-loader": "2.0.0",
     "classnames": "2.1.2",
+    "css-loader": "0.14.4",
+    "node-sass": "3.1.2",
     "react": "0.13.x",
+    "sass-loader": "1.0.2",
+    "style-loader": "0.12.3",
     "uuid": "2.0.1"
   },
   "devDependencies": {
     "babel": "5.4.7",
     "babel-core": "5.4.7",
     "babel-loader": "5.1.3",
+    "normalize.css": "3.0.3",
     "webpack": "1.9.10",
     "webpack-dev-server": "1.9.0"
   }
