--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "demo": "webpack-dev-server --config webpack.config.demo.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --reporter spec --compilers jsx:test/compiler.js ./src/**/*Test.jsx"
   },
   "repository": {
     "type": "git",
@@ -22,20 +22,24 @@
   },
   "homepage": "https://github.com/daviferreira/react-sanfona",
   "dependencies": {
-    "autoprefixer-loader": "2.0.0",
-    "classnames": "2.1.2",
-    "css-loader": "0.14.4",
-    "node-sass": "3.1.2",
-    "react": "0.13.x",
-    "sass-loader": "1.0.2",
-    "style-loader": "0.12.3",
-    "uuid": "2.0.1"
+    "react": "0.13.x"
   },
   "devDependencies": {
+    "autoprefixer-loader": "2.0.0",
     "babel": "5.4.7",
     "babel-core": "5.4.7",
     "babel-loader": "5.1.3",
+    "classnames": "2.1.2",
+    "css-loader": "0.14.4",
+    "jsdom": "3.1.2",
+    "mocha": "2.2.5",
+    "mocha-jsdom": "0.4.0",
+    "node-sass": "3.1.2",
     "normalize.css": "3.0.3",
+    "sass-loader": "1.0.2",
+    "style-loader": "0.12.3",
+    "unexpected": "7.5.1",
+    "uuid": "2.0.1",
     "webpack": "1.9.10",
     "webpack-dev-server": "1.9.0"
   }
