--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bundle-dist": "webpack --config webpack.config.dist.js",
     "build-modules": "trash dist-modules/* --force && babel src --loose --out-dir dist-modules",
     "demo": "webpack-dev-server --config webpack.config.demo.js",
+    "lint": "eslint ./src",
     "test": "mocha -R spec --compilers jsx:test/compiler.js ./src/**/test.jsx"
   },
   "repository": {
@@ -33,6 +34,8 @@
     "babel-loader": "5.1.3",
     "classnames": "2.1.2",
     "css-loader": "0.14.4",
+    "eslint": "0.22.1",
+    "eslint-plugin-react": "2.5.0",
     "jsdom": "3.1.2",
     "mocha": "2.2.5",
     "mocha-jsdom": "0.4.0",
