--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist-modules/index.js",
   "scripts": {
     "bundle-dist": "webpack --config webpack.config.dist.js",
-    "build-modules": "trash dist-modules/* --force && babel src --loose --out-dir dist-modules",
+    "bundle-modules": "trash dist-modules/* --force && babel src --loose --out-dir dist-modules",
     "demo": "webpack-dev-server --config webpack.config.demo.js",
     "lint": "eslint ./src",
     "test": "npm run lint && mocha -R spec --compilers jsx:test/compiler.js ./src/**/test.jsx"
@@ -16,7 +16,12 @@
   },
   "keywords": [
     "react",
-    "accordion"
+    "reactjs",
+    "react-component",
+    "accordion",
+    "accessibility",
+    "aria",
+    "widget"
   ],
   "author": "Davi Ferreira <hi@daviferreira.com>",
   "license": "MIT",
