--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
   "peerDependencies": {
     "react": "0.13.x"
   },
+  "dependencies": {
+    "classnames": "2.1.2"
+  },
   "devDependencies": {
     "autoprefixer-loader": "2.0.0",
     "babel": "5.4.7",
     "babel-core": "5.4.7",
     "babel-loader": "5.1.3",
-    "classnames": "2.1.2",
     "css-loader": "0.14.4",
     "eslint": "0.22.1",
     "eslint-plugin-react": "2.5.0",
