--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react": "0.13.x"
   },
   "dependencies": {
-    "classnames": "2.1.2"
+    "classnames": "2.1.2",
+    "uuid": "2.0.1"
   },
   "devDependencies": {
     "autoprefixer-loader": "2.0.0",
@@ -55,7 +56,6 @@
     "trash": "1.4.1",
     "unexpected": "7.5.1",
     "unexpected-sinon": "6.1.2",
-    "uuid": "2.0.1",
     "webpack": "1.9.10",
     "webpack-dev-server": "1.9.0"
   }
