--- a/.eslintrc
+++ b/.eslintrc
@@ -8,9 +8,6 @@
     "modules": true,
     "jsx": true
   },
-  "plugins": [
-    "react"
-  ],
   "rules": {
     "curly": 0,
     "radix": 2,
@@ -23,16 +20,10 @@
     "no-nested-ternary": 2,
     "no-use-before-define": [2, "nofunc"],
     "quotes": [2, "single"],
-    "space-after-function-name": [2, "never"],
     "space-after-keywords": [2, "always"],
     "space-before-blocks": [2, "always"],
+    "space-before-function-paren": [2, "never"],
     "space-in-parens": [2, "never"],
-    "space-unary-ops": 2,
-
-    "react/jsx-quotes": [2, "single"],
-    "react/jsx-no-undef": 2,
-    "react/jsx-uses-react": 2,
-    "react/jsx-uses-vars": 2,
-    "react/react-in-jsx-scope": 2
+    "space-unary-ops": 2
   }
 }
