--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   },
   "homepage": "https://github.com/daviferreira/react-sanfona",
   "peerDependencies": {
-    "react": "0.14.0"
+    "react": "0.14.0",
+    "react-dom": "0.14.0"
   },
   "dependencies": {
     "classnames": "2.1.5",
