--- a/package.json
+++ b/package.json
@@ -46,11 +46,10 @@
     "css-loader": "0.19.0",
     "eslint": "1.6.0",
     "eslint-plugin-react": "3.5.1",
-    "jsdom": "6.5.1",
     "mocha": "2.3.3",
-    "mocha-jsdom": "1.0.0",
     "node-sass": "3.3.3",
     "normalize.css": "3.0.3",
+    "react-addons-test-utils": "0.14.0",
     "sass-loader": "3.0.0",
     "sinon": "1.17.1",
     "style-loader": "0.12.4",
