--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "mocha": "2.3.3",
     "node-sass": "3.4.1",
     "normalize.css": "3.0.3",
+    "object-assign": "4.0.1",
     "react-addons-test-utils": "0.14.0",
     "sass-loader": "3.1.0",
     "sinon": "1.17.1",
