--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "bundle-modules": "rm -rf dist-modules/* --force && babel src --loose --out-dir dist-modules",
     "demo": "webpack-dev-server --config webpack.config.demo.js",
     "lint": "eslint ./src",
-    "test": "npm run lint && mocha -R spec --compilers jsx:test/compiler.js ./src/**/test.jsx"
+    "test": "npm run lint && mocha -R spec --compilers jsx:./test/compiler ./src/**/test.jsx"
   },
   "repository": {
     "type": "git",
@@ -31,33 +31,36 @@
   },
   "homepage": "https://github.com/daviferreira/react-sanfona",
   "peerDependencies": {
-    "react": "0.14.0",
-    "react-dom": "0.14.0"
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2"
   },
   "dependencies": {
-    "classnames": "2.1.5",
+    "classnames": "2.2.0",
     "uuid": "2.0.1"
   },
   "devDependencies": {
     "autoprefixer-loader": "3.1.0",
-    "babel": "5.8.29",
-    "babel-core": "5.8.30",
-    "babel-loader": "5.3.2",
-    "css-loader": "0.19.0",
-    "eslint": "1.6.0",
-    "eslint-plugin-react": "3.5.1",
-    "mocha": "2.3.3",
-    "node-sass": "3.4.1",
+    "babel-core": "6.1.18",
+    "babel-loader": "6.2.0",
+    "babel-preset-es2015": "6.1.18",
+    "babel-preset-react": "6.1.18",
+    "babel-preset-stage-0": "6.1.18",
+    "css-loader": "0.23.0",
+    "eslint": "1.9.0",
+    "eslint-plugin-react": "3.9.0",
+    "mocha": "2.3.4",
+    "node-sass": "3.4.2",
     "normalize.css": "3.0.3",
     "object-assign": "4.0.1",
-    "react-addons-test-utils": "0.14.0",
-    "sass-loader": "3.1.0",
-    "sinon": "1.17.1",
-    "skin-deep": "0.12.0",
-    "style-loader": "0.12.4",
+    "react-addons-test-utils": "0.14.2",
+    "regexpu": "1.3.0",
+    "sass-loader": "3.1.1",
+    "sinon": "1.17.2",
+    "skin-deep": "0.13.0",
+    "style-loader": "0.13.0",
     "unexpected": "10.0.2",
     "unexpected-sinon": "8.0.0",
-    "webpack": "1.12.2",
-    "webpack-dev-server": "1.12.0"
+    "webpack": "1.12.6",
+    "webpack-dev-server": "1.12.1"
   }
 }
