--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "bundle-demo": "webpack --config webpack.config.demo.js",
     "bundle-dist": "webpack --config webpack.config.dist.js",
-    "bundle-modules": "rm -rf dist-modules/* --force && babel src --loose --out-dir dist-modules",
+    "bundle-modules": "rm -rf dist-modules/* --force && ./node_modules/.bin/babel src --loose --out-dir dist-modules",
     "demo": "webpack-dev-server --config webpack.config.demo.js",
     "lint": "eslint ./src",
     "test": "npm run lint && mocha -R spec --compilers jsx:./test/compiler ./src/**/test.jsx"
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "autoprefixer-loader": "3.1.0",
+    "babel-cli": "6.4.5",
     "babel-core": "6.1.18",
     "babel-loader": "6.2.0",
     "babel-preset-es2015": "6.1.18",
