--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "node-sass": "3.4.2",
     "normalize.css": "3.0.3",
     "object-assign": "4.0.1",
+    "react": "0.14.6",
     "react-addons-test-utils": "0.14.2",
+    "react-dom": "0.14.6",
     "regexpu": "1.3.0",
     "sass-loader": "3.1.1",
     "sinon": "1.17.2",
