--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "autoprefixer-loader": "3.1.0",
+    "babel-cli": "6.6.5",
     "babel-core": "6.1.18",
     "babel-loader": "6.2.0",
     "babel-preset-es2015": "6.1.18",
