--- a/package.json
+++ b/package.json
@@ -36,36 +36,36 @@
     "react-dom": "^0.14 || ^15.0"
   },
   "dependencies": {
-    "classnames": "2.2.0",
-    "uuid": "2.0.1"
+    "classnames": "2.2.5",
+    "uuid": "3.0.1"
   },
   "devDependencies": {
-    "autoprefixer-loader": "3.1.0",
-    "babel-cli": "6.6.5",
-    "babel-core": "6.1.18",
-    "babel-eslint": "6.0.4",
-    "babel-loader": "6.2.0",
-    "babel-preset-es2015": "6.1.18",
-    "babel-preset-react": "6.1.18",
-    "babel-preset-stage-0": "6.1.18",
-    "css-loader": "0.23.0",
-    "eslint": "2.9.0",
-    "eslint-plugin-react": "5.0.1",
-    "mocha": "2.3.4",
-    "node-sass": "3.4.2",
-    "normalize.css": "3.0.3",
-    "object-assign": "4.0.1",
-    "react": "^15.0.2",
-    "react-addons-test-utils": "15.0.2",
-    "react-dom": "^15.0.2",
-    "regexpu": "1.3.0",
-    "sass-loader": "3.1.1",
-    "sinon": "1.17.2",
-    "skin-deep": "0.13.0",
-    "style-loader": "0.13.0",
-    "unexpected": "10.0.2",
-    "unexpected-sinon": "8.0.0",
-    "webpack": "1.12.6",
-    "webpack-dev-server": "1.12.1"
+    "autoprefixer-loader": "3.2.0",
+    "babel-cli": "6.24.0",
+    "babel-core": "6.24.0",
+    "babel-eslint": "7.1.1",
+    "babel-loader": "6.4.1",
+    "babel-preset-es2015": "6.24.0",
+    "babel-preset-react": "6.23.0",
+    "babel-preset-stage-0": "6.22.0",
+    "css-loader": "0.27.3",
+    "eslint": "3.18.0",
+    "eslint-plugin-react": "6.10.2",
+    "mocha": "3.2.0",
+    "node-sass": "4.5.0",
+    "normalize.css": "5.0.0",
+    "object-assign": "4.1.1",
+    "react": "15.4.2",
+    "react-addons-test-utils": "15.4.2",
+    "react-dom": "15.4.2",
+    "regexpu": "4.0.3",
+    "sass-loader": "6.0.3",
+    "sinon": "2.1.0",
+    "skin-deep": "1.0.0-alpha2",
+    "style-loader": "0.14.1",
+    "unexpected": "10.26.3",
+    "unexpected-sinon": "10.7.1",
+    "webpack": "2.2.1",
+    "webpack-dev-server": "2.4.2"
   }
 }
