--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "uuid": "3.0.1"
   },
   "devDependencies": {
-    "autoprefixer-loader": "3.2.0",
+    "autoprefixer": "6.7.7",
     "babel-cli": "6.24.0",
     "babel-core": "6.24.0",
     "babel-eslint": "7.1.1",
@@ -55,6 +55,7 @@
     "node-sass": "4.5.0",
     "normalize.css": "5.0.0",
     "object-assign": "4.1.1",
+    "postcss-loader": "1.3.3",
     "react": "15.4.2",
     "react-addons-test-utils": "15.4.2",
     "react-dom": "15.4.2",
