--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "demo": "webpack-dev-server --config webpack.config.demo.js",
     "lint": "eslint ./src",
     "test": "npm run lint && mocha -R spec --compilers jsx:./test/compiler ./src/**/test.jsx",
-    "preversion": "npm run bundle-dist && npm run bundle-modules && git add dist dist-modules"
+    "prepublish": "npm run bundle-dist && npm run bundle-modules"
   },
   "repository": {
     "type": "git",
