--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "bundle-demo": "webpack --config webpack.config.demo.js",
     "bundle-dist": "webpack --config webpack.config.dist.js",
     "bundle-modules": "rm -rf dist-modules/* --force && babel src --loose --out-dir dist-modules",
-    "demo": "webpack-dev-server --config webpack.config.demo.js",
+    "start": "webpack-dev-server --config webpack.config.demo.js",
     "lint": "eslint ./src",
     "test": "npm run lint && mocha -R spec --compilers jsx:./test/compiler ./src/**/test.jsx",
     "prepublish": "npm run bundle-dist && npm run bundle-modules"
@@ -37,37 +37,38 @@
   },
   "dependencies": {
     "classnames": "2.2.5",
-    "uuid": "3.0.1",
+    "uuid": "3.1.0",
     "prop-types": "^15.5.8"
   },
   "devDependencies": {
-    "autoprefixer": "6.7.7",
-    "babel-cli": "6.24.0",
-    "babel-core": "6.24.0",
-    "babel-eslint": "7.1.1",
-    "babel-loader": "6.4.1",
-    "babel-preset-es2015": "6.24.0",
-    "babel-preset-react": "6.23.0",
-    "babel-preset-stage-0": "6.22.0",
-    "css-loader": "0.27.3",
-    "eslint": "3.18.0",
-    "eslint-plugin-react": "6.10.2",
-    "mocha": "3.2.0",
-    "node-sass": "4.5.0",
-    "normalize.css": "5.0.0",
+    "autoprefixer": "7.1.4",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-eslint": "8.0.0",
+    "babel-loader": "7.1.2",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "css-loader": "0.28.7",
+    "eslint": "4.7.1",
+    "eslint-plugin-react": "7.3.0",
+    "mocha": "3.5.3",
+    "node-sass": "4.5.3",
+    "normalize.css": "7.0.0",
     "object-assign": "4.1.1",
-    "postcss-loader": "1.3.3",
-    "react": "15.4.2",
-    "react-addons-test-utils": "15.4.2",
-    "react-dom": "15.4.2",
-    "regexpu": "4.0.3",
-    "sass-loader": "6.0.3",
-    "sinon": "2.1.0",
-    "skin-deep": "1.0.0-alpha2",
-    "style-loader": "0.14.1",
-    "unexpected": "10.26.3",
-    "unexpected-sinon": "10.7.1",
-    "webpack": "2.2.1",
-    "webpack-dev-server": "2.4.2"
+    "postcss-loader": "2.0.6",
+    "react": "15.6.1",
+    "react-addons-test-utils": "15.6.0",
+    "react-dom": "15.6.1",
+    "react-test-renderer": "15.6.1",
+    "regexpu": "4.1.3",
+    "sass-loader": "6.0.6",
+    "sinon": "3.3.0",
+    "skin-deep": "1.1.1",
+    "style-loader": "0.18.2",
+    "unexpected": "10.35.0",
+    "unexpected-sinon": "10.8.2",
+    "webpack": "3.6.0",
+    "webpack-dev-server": "2.8.2"
   }
 }
