--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "bundle-modules": "rm -rf dist-modules/* --force && babel src --loose --out-dir dist-modules",
     "start": "webpack-dev-server --config webpack.config.demo.js",
     "lint": "eslint ./src",
-    "test": "npm run lint && mocha -R spec --compilers jsx:./test/compiler ./src/**/test.jsx",
+    "test": "npm run lint && mocha -R spec --compilers js:babel-core/register ./src/**/test.js",
     "prepublish": "npm run bundle-dist && npm run bundle-modules"
   },
   "repository": {
