--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-sanfona",
-  "version": "0.4.2",
+  "version": "1.0.0-rc1",
   "description": "React accessible accordion component",
   "main": "./dist-modules/index.js",
   "scripts": {
