--- a/package.json
+++ b/package.json
@@ -52,7 +52,14 @@
     "babel-preset-stage-0": "6.24.1",
     "css-loader": "0.28.7",
     "eslint": "4.9.0",
+    "eslint-config-prettier": "2.6.0",
+    "eslint-config-standard": "10.2.1",
+    "eslint-config-standard-react": "5.0.0",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-node": "5.2.0",
+    "eslint-plugin-promise": "3.6.0",
     "eslint-plugin-react": "7.4.0",
+    "eslint-plugin-standard": "3.0.1",
     "mocha": "4.0.1",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
