--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-sanfona",
-  "version": "0.4.3",
+  "version": "1.0.0-rc3",
   "description": "React accessible accordion component",
   "main": "./dist-modules/index.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "bundle-modules": "rm -rf dist-modules/* --force && babel src --loose --out-dir dist-modules",
     "start": "webpack-dev-server --config webpack.config.demo.js",
     "lint": "eslint ./src",
-    "test": "npm run lint && mocha -R spec --compilers js:babel-core/register ./src/**/test.js",
+    "test": "npm run lint && mocha -R spec --require babel-register ./src/**/test.js",
     "prepublish": "npm run bundle-dist && npm run bundle-modules"
   },
   "repository": {
@@ -32,44 +32,45 @@
   },
   "homepage": "https://github.com/daviferreira/react-sanfona",
   "peerDependencies": {
-    "react": "^0.14 || ^15.0",
-    "react-dom": "^0.14 || ^15.0"
+    "react": "^15.0 || ^16.0",
+    "react-dom": "^15.0 || ^16.0"
   },
   "dependencies": {
     "classnames": "2.2.5",
     "uuid": "3.1.0",
-    "prop-types": "^15.5.8"
+    "prop-types": "15.6.0"
   },
   "devDependencies": {
-    "autoprefixer": "7.1.4",
+    "autoprefixer": "7.1.6",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
-    "babel-eslint": "8.0.0",
+    "babel-eslint": "8.0.1",
     "babel-loader": "7.1.2",
-    "babel-preset-env": "1.6.0",
+    "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
     "css-loader": "0.28.7",
-    "eslint": "4.7.1",
-    "eslint-plugin-react": "7.3.0",
-    "mocha": "3.5.3",
-    "node-sass": "4.5.3",
+    "eslint": "4.9.0",
+    "eslint-config-prettier": "2.6.0",
+    "eslint-config-standard": "10.2.1",
+    "eslint-config-standard-react": "5.0.0",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-node": "5.2.0",
+    "eslint-plugin-promise": "3.6.0",
+    "eslint-plugin-react": "7.4.0",
+    "eslint-plugin-standard": "3.0.1",
+    "mocha": "4.0.1",
     "normalize.css": "7.0.0",
-    "object-assign": "4.1.1",
-    "postcss-loader": "2.0.6",
-    "react": "15.6.1",
-    "react-addons-test-utils": "15.6.0",
-    "react-dom": "15.6.1",
-    "react-test-renderer": "15.6.1",
-    "regexpu": "4.1.3",
-    "sass-loader": "6.0.6",
-    "sinon": "3.3.0",
-    "skin-deep": "1.1.1",
-    "style-loader": "0.18.2",
-    "unexpected": "10.35.0",
-    "unexpected-sinon": "10.8.2",
-    "webpack": "3.6.0",
-    "webpack-dev-server": "2.8.2"
+    "postcss-loader": "2.0.8",
+    "react": "16.0.0",
+    "react-addons-test-utils": "15.6.2",
+    "react-dom": "16.0.0",
+    "react-test-renderer": "16.0.0",
+    "skin-deep": "1.2.0",
+    "style-loader": "0.19.0",
+    "unexpected": "10.36.0",
+    "webpack": "3.8.1",
+    "webpack-dev-server": "2.9.3"
   }
 }
