--- a/package.json
+++ b/package.json
@@ -39,42 +39,42 @@
     "react-dom": "^15.0 || ^16.0"
   },
   "dependencies": {
-    "classnames": "2.2.5",
-    "uuid": "3.2.1",
-    "prop-types": "15.6.0"
+    "classnames": "^2.2.5",
+    "uuid": "^3.2.1",
+    "prop-types": "^15.6.0"
   },
   "devDependencies": {
-    "autoprefixer": "8.0.0",
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.0",
-    "babel-eslint": "8.2.2",
-    "babel-loader": "7.1.2",
-    "babel-preset-env": "1.6.1",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-0": "6.24.1",
-    "css-loader": "0.28.9",
-    "eslint": "4.18.1",
-    "eslint-config-prettier": "2.9.0",
-    "eslint-config-standard": "11.0.0",
-    "eslint-config-standard-react": "5.0.0",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-node": "6.0.0",
-    "eslint-plugin-promise": "3.6.0",
-    "eslint-plugin-react": "7.7.0",
-    "eslint-plugin-standard": "3.0.1",
-    "gh-pages": "1.1.0",
-    "mocha": "5.0.1",
-    "normalize.css": "8.0.0",
-    "postcss-loader": "2.1.0",
-    "react": "16.2.0",
-    "react-addons-test-utils": "15.6.2",
-    "react-dom": "16.2.0",
-    "react-test-renderer": "16.2.0",
-    "skin-deep": "1.2.0",
-    "style-loader": "0.20.2",
-    "unexpected": "10.37.2",
-    "webpack": "3.11.0",
-    "webpack-dev-server": "2.11.1"
+    "autoprefixer": "^8.0.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.9",
+    "eslint": "^4.18.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-config-standard-react": "^5.0.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^6.0.0",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "gh-pages": "^1.1.0",
+    "mocha": "^5.0.1",
+    "normalize.css": "^8.0.0",
+    "postcss-loader": "^2.1.0",
+    "react": "^16.2.0",
+    "react-addons-test-utils": "^15.6.2",
+    "react-dom": "^16.2.0",
+    "react-test-renderer": "^16.2.0",
+    "skin-deep": "^1.2.0",
+    "style-loader": "^0.20.2",
+    "unexpected": "^10.37.2",
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.1"
   }
 }
