--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "./dist-modules/index.js",
   "scripts": {
     "bundle-demo": "webpack --config webpack.config.demo.js",
-    "bundle-dist": "webpack --config webpack.config.dist.js",
-    "bundle-page": "webpack --config webpack.config.page.js",
-    "bundle-modules": "rm -rf dist-modules/* --force && babel src --loose --out-dir dist-modules",
+    "bundle-dist": "NODE_ENV=production webpack --config webpack.config.dist.js",
+    "bundle-page": "NODE_ENV=production webpack --config webpack.config.page.js",
+    "bundle-modules": "rm -rf dist-modules/* --force && NODE_ENV=production babel src --loose --out-dir dist-modules",
     "start": "webpack-dev-server --config webpack.config.demo.js",
     "lint": "eslint ./src",
     "test": "npm run lint && mocha -R spec --require babel-register ./src/**/test.js",
@@ -49,6 +49,7 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
