--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "React accessible accordion component",
   "main": "./dist-modules/index.js",
   "scripts": {
-    "bundle-demo": "webpack --config webpack.config.demo.js",
-    "bundle-dist": "NODE_ENV=production webpack --config webpack.config.dist.js",
-    "bundle-page": "NODE_ENV=production webpack --config webpack.config.page.js",
-    "bundle-modules": "rm -rf dist-modules/* --force && NODE_ENV=production babel src --loose --out-dir dist-modules",
+    "bundle:demo": "webpack --config webpack.config.demo.js",
+    "bundle:dist": "NODE_ENV=production webpack --config webpack.config.dist.js",
+    "bundle:page": "NODE_ENV=production webpack --config webpack.config.page.js",
+    "bundle:modules": "rm -rf dist-modules/* --force && NODE_ENV=production babel src --loose --out-dir dist-modules",
     "start": "webpack-dev-server --config webpack.config.demo.js",
     "lint": "eslint ./src",
-    "test": "npm run lint && mocha -R spec --require babel-register ./src/**/test.js",
-    "prepare": "npm run bundle-dist && npm run bundle-modules",
+    "test": "npm run lint && mocha -R spec --require @babel/register ./src/**/test.js",
+    "prepare": "npm run bundle:dist && npm run bundle:modules",
     "prepublishOnly": "npm run deploy",
-    "deploy": "npm run bundle-page && gh-pages -a -d page/"
+    "deploy": "npm run bundle:page && gh-pages -a -d page/"
   },
   "repository": {
     "type": "git",
@@ -39,44 +39,59 @@
     "react-dom": "^15.0 || ^16.0"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
-    "uuid": "^3.2.1",
-    "prop-types": "^15.6.1"
+    "classnames": "^2.2.6",
+    "prop-types": "^15.6.2",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "autoprefixer": "^8.3.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-config-standard-react": "^6.0.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-react": "^7.7.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "gh-pages": "^1.1.0",
-    "mocha": "^5.1.1",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-bind": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "autoprefixer": "^9.1.3",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.15",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.5.0",
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-config-standard-react": "^7.0.2",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.0",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "gh-pages": "^1.2.0",
+    "mocha": "^5.2.0",
     "normalize.css": "^8.0.0",
-    "postcss-loader": "^2.1.4",
-    "react": "^16.3.2",
+    "postcss-loader": "^3.0.0",
+    "react": "^16.4.2",
     "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^16.3.2",
-    "react-test-renderer": "^16.3.2",
+    "react-dom": "^16.4.2",
+    "react-test-renderer": "^16.4.2",
     "skin-deep": "^1.2.0",
-    "style-loader": "^0.21.0",
-    "unexpected": "^10.37.5",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15",
-    "webpack-dev-server": "^3.1.3"
+    "style-loader": "^0.23.0",
+    "unexpected": "^10.38.0",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.7"
   }
 }
